fixed issue with cover sizes on smaller screens and fixed issue with incorrect text on the header for all club pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,8 @@ main {
     align-items: center;
     column-gap: 20px;
     position: relative;
+    min-width: 216.28px;
+    min-height: 268px;
     width: min-content;
     padding: 20px;
     line-height: 2;
